--- a/package.json
+++ b/package.json
@@ -42,10 +42,9 @@
     "hygen": "5.0.3",
     "lint-staged": "^10.5.4",
     "npm-run-all": "^4.1.5",
-    "postcss-nested": "^5.0.5",
+    "postcss": "^8.2.15",
     "postcss-preset-env": "^6.7.0",
     "postcss-scss": "^3.0.5",
-    "postcss-sort-media-queries": "^3.7.7",
     "prettier": "^2.2.1",
     "sass": "^1.32.8",
     "stylelint": "^13.12.0",
@@ -64,8 +63,5 @@
       "yarn lint:style:fix",
       "yarn format"
     ]
-  },
-  "browserslist": [
-    "defaults"
-  ]
+  }
 }
