--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fin-app",
+  "name": "vite-react-redux-template",
   "version": "0.0.1",
   "license": "MIT",
   "private": true,
@@ -19,41 +19,54 @@
     "make:component": "hygen component new --name",
     "make:page": "hygen page new --name",
     "make:container": "hygen container new --name",
-    "make:slice": "hygen slice new --name"
+    "make:slice": "hygen slice new --name",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.5.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-redux": "^7.2.3",
-    "react-router-dom": "^5.2.0"
+    "@reduxjs/toolkit": "1.5.1",
+    "react": "17.0.0",
+    "react-dom": "17.0.0",
+    "react-redux": "7.2.3",
+    "react-router-dom": "5.2.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.20.0",
-    "@typescript-eslint/parser": "^4.20.0",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "autoprefixer": "^10.2.5",
-    "eslint": "^7.23.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-react": "^7.23.1",
-    "husky": "^6.0.0",
+    "@babel/core": "7.14.2",
+    "@storybook/addon-actions": "6.2.9",
+    "@storybook/addon-essentials": "6.2.9",
+    "@storybook/addon-links": "6.2.9",
+    "@storybook/addon-postcss": "2.0.0",
+    "@storybook/preset-scss": "1.0.3",
+    "@storybook/react": "6.2.9",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "@types/react-router-dom": "5.1.7",
+    "@typescript-eslint/eslint-plugin": "4.20.0",
+    "@typescript-eslint/parser": "4.20.0",
+    "@vitejs/plugin-react-refresh": "1.3.1",
+    "autoprefixer": "9.0.0",
+    "babel-loader": "8.2.2",
+    "css-loader": "5.2.4",
+    "eslint": "7.23.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-react": "7.23.1",
+    "husky": "6.0.0",
     "hygen": "5.0.3",
-    "lint-staged": "^10.5.4",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.2.15",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-scss": "^3.0.5",
-    "prettier": "^2.2.1",
-    "sass": "^1.32.8",
-    "stylelint": "^13.12.0",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-standard": "^21.0.0",
-    "typescript": "^4.1.2",
-    "vite": "^2.1.5",
-    "vite-plugin-react-svg": "^0.2.0"
+    "lint-staged": "10.5.4",
+    "npm-run-all": "4.1.5",
+    "postcss": "8.2.15",
+    "postcss-preset-env": "6.7.0",
+    "postcss-scss": "3.0.5",
+    "prettier": "2.2.1",
+    "sass": "1.32.8",
+    "sass-loader": "10.1.1",
+    "style-loader": "2.0.0",
+    "stylelint": "13.12.0",
+    "stylelint-config-prettier": "8.0.2",
+    "stylelint-config-standard": "21.0.0",
+    "typescript": "4.1.2",
+    "vite": "2.1.5",
+    "vite-plugin-react-svg": "0.2.0"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
