--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.5.1",
+    "axios": "0.21.1",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-redux": "7.2.3",
