--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "serve": "vite preview",
     "typecheck": "tsc -p ./tsconfig.json --noEmit",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
