--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "stylelint-config-standard": "21.0.0",
     "typescript": "4.1.2",
     "vite": "2.1.5",
-    "vite-plugin-react-svg": "0.2.0"
+    "vite-plugin-react-svg": "0.2.0",
+    "vite-tsconfig-paths": "^3.3.12"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
